[package]
name = "fix-stacks"
version = "0.1.0"
authors = ["Nicholas Nethercote <nnethercote@mozilla.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.32" # Keep this in sync with what symbolic-debuginfo is using.
fxhash = "0.2.1"
goblin = "0.5.3" # Keep this in sync with what symbolic-debuginfo is using.
regex = "1.5.5"
serde_json = "1.0"
symbolic-common = "9.1.0"
symbolic-debuginfo = "9.1.0"
symbolic-demangle = "9.1.0"

[profile.release]
lto = true
